--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,41 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: ABS笔记库
+description: ABS投资策略和信用研究的个人笔记整合
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://abs-note.github.io/
 
+# Aux links for the upper right navigation
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  'GitHub仓库': https://github.com/abs-note/abs-note.github.io
+
+sass: # set sass options for silencing deprecations
+  quiet_deps: true
+  silence_deprecations: ['import']
+
+# By default, consuming the theme as a gem leaves mermaid disabled; it is opt-in
+mermaid:
+  # Version of mermaid library
+  # Pick an available version from https://cdn.jsdelivr.net/npm/mermaid/
+  version: "11.4.1"
+  # Put any additional configuration, such as setting the theme, in _includes/mermaid_config.js
+  # See also docs/ui-components/code
+  # To load mermaid from a local library, also use the `path` key to specify the location of the library; e.g.
+  # for (v10+):
+  # path: "/assets/js/mermaid.esm.min.mjs"
+  # for (<v10):
+  # path: "/assets/js/mermaid.min.js"
+  # Note: copy both `mermaid.esm.min.mjs` (v10+) or `mermaid.min.js` (<v10) and the associated `.map` file from the specified version of `mermaid/dist` to `/assets/js/`.
+
+
+# Enable or disable heading anchors
+heading_anchors: true
+
+# Enable or disable the side/mobile menu globally
+# Nav menu can also be selectively enabled or disabled using page variables or the minimal layout
+nav_enabled: true
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "返回顶部"
+
+footer_content: 'Copyright &copy; 2025 ABSCredit@outlook.com'
