--- a/_config.yml
+++ b/_config.yml
@@ -39,3 +39,6 @@ back_to_top: true
 back_to_top_text: "返回顶部"
 
 footer_content: 'Copyright &copy; 2025 ABSCredit@outlook.com'
+
+# To make KaTeX available on all your web pages
+math: katex
