--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,10 @@ mermaid:
 # Enable or disable heading anchors
 heading_anchors: true
 
+# Enable or disable the site search
+# Supports true (default) or false
+search_enabled: true
+
 # Enable or disable the side/mobile menu globally
 # Nav menu can also be selectively enabled or disabled using page variables or the minimal layout
 nav_enabled: true
